@@ -118,6 +118,10 @@ Extension Modules
 - Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
   intended for RECNO databases.
 
+- Fix bsddb.dbtables: Don't randomly corrupt newly inserted rows by
+  picking a rowid string with null bytes in it.  Such rows could not
+  later be deleted, modified or individually selected.
+
 - Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
   WIN32_FIND_DATAW structures in the ctypes.wintypes module.
 
